--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -57,6 +57,17 @@ Escribe un correo á:
 <img align="absmiddle" src=":::imageLink:::/xaviblas-correo.png">
 
 
+<li>Puedo conectar más de un Chronopic a un ordenador? [TRADUCIR]
+<p>
+Sí.
+<ul>
+<li>Un Chronopic es suficiente para captar estímulos de uno o más dispositivos de medida (como plataformas de contacto) siempre que no se produzca contacto en diversos dispositivos al mismo tiempo. Si desea medir el tiempo de contacto y el tiempo de vuelo en la marcha, no podrá diferenciar entre un pie y el otro con sólo un Chronopic aunque tenga una plataforma de contacto para cada pie.
+<li>
+Con dos o más Chronopics podrá captar canales diferentes. En el ejemplo del análisis de la marcha, podrá ubicar un dispositivo de medida para cada pie, conectando cada dispositivo a un Chronopic y conectando ambos Chronopics a un ordenador. Ejecutando dos veces el programa Chronojump_mini podrá detectar la fase de contacto y la de vuelo de cada pie, así como exportar los datos a una hoja de cálculo para analizarlas. Más información en: <a href="http://mail.gnome.org/archives/chronojump-list/2008-July/msg00015.html">important: connecting n chronopics to a computer / importante: conectando n chronopics a un ordenador</a>.
+</ul>
+
+
+
 <li>Por que é necesario un cronómetro se calquera ordenador pode facer esa función?
 <p>Os sistemas operativos modernos son multitarefa, o que significa que o ordenador asigna pequenas cantidades de tempo para a realización de cada unha das tarefas de maneira que parece que executa todas a un tempo. Se o ordenador se encarga de captar os estímulos que proceden da plataforma de contactos, en ocasións será tardío en advertir estes eventos porque estará ocupado noutros <i>asuntos</i>, o que se vén traducir en problemas de fiabilidade debido a que dous saltos da mesma duración poderían obter medicións distintas por circunstancias aleatorias.<br>
 O cronómetro externo que construímos está especializado na captación de eventos na plataforma de contactos polo que non aparecerán erros de fiabilidade nos seus rexistros.<br>
